Fix break in admin CSS

--- a/public/css/style_admin.css
+++ b/public/css/style_admin.css
@@ -305,13 +305,13 @@ div.pageOptions .textarea {
 /*
     All blog posts
 */
-div#allblogPosts .list-group {
+div#allblogPosts ul {
   margin-left: auto;
   margin-right: auto;
   max-width: 800px;
   width: 100%;
 }
-div#allblogPosts .list-group-item {
+div#allblogPosts ul>li {
   background: white;
   border: 1px solid #bcbcbc5c;
   display: block;
@@ -351,33 +351,64 @@ div#allblogPosts .category {
   background-color: #959595;
   color: #ffffff;
 }
+div#allblogPosts .category:hover {
+  background-color: #b5b0b0;
+  color: rgb(68, 68, 68);
+}
+div#allblogPosts .category.active:hover,
+div#allblogPosts .category.active {
+  border: 1px solid black;
+  background-color: #575656;
+  color: white;
+  cursor: default;
+}
 div#allblogPosts .tags {
   background-color: #f5f5f5;
   color: #4a4a4a;
   margin-bottom: 0;
+}
+div#allblogPosts .tags:hover {
+  background-color: #e4e4e4;
+}
+/* Category selector on blog overview */
+div#allblogPosts .categories {
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
+  text-align: center;
+}
+div#allblogPosts .categories div {
+  display: inline-block;
+}
+div#allblogPosts .categories div a.category {
+  font-size: 1.2rem;
+  height: 2rem;
+  margin-top: 0;
 }
 
 
 /*
     All pages
 */
-div#allpagePosts .list-group {
+div#allpagePosts {
   margin-left: auto;
   margin-right: auto;
   max-width: 800px;
   width: 100%;
 }
-div#allpagePosts .list-group-item {
-  background: white;
+div#allpagePosts ul>a>div {
+  background-color: white;
   border: 1px solid #bcbcbc5c;
+  color: black;
   display: block;
   margin-left: auto;
   margin-right: auto;
   padding: 1rem;
   width: 100%;
 }
-div#allpagePosts a.list-group-item {
-  color: black;
+div#allpagePosts ul>a>div:hover {
+  background-color: #ebebeb;
 }
 
 
